libstream-more-perl (0.8.1) UNRELEASED; urgency=low

  * Stream::Moose::Filter role

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 12 Mar 2012 23:39:52 +0400

libstream-more-perl (0.8.0) unstable; urgency=low

  * using Class::DOES::Moose to add extra DOES capabilities
  * Stream::MemoryStorage::In supports lag
  * Stream::Concat::In:
   - optionally impelement ClientList
   - return undef from read() in list context when there is nothing to read
   - always try to new data from the last stream, even after returning undef
  * Stream::RoundRobin:
   - fix description
   - fix read_only mode

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 29 Feb 2012 21:04:06 +0400

libstream-more-perl (0.7.8) UNRELEASED; urgency=low

  * Stream::Propagate:
   - load formats from catalog
   - compress content if gzip option is set

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 17 Feb 2012 17:22:43 +0400

libstream-more-perl (0.7.7) unstable; urgency=low

  * Stream::In::DiskBuffer: fix adaptive chunk size calculation
  * Stream::Out::Any: targets() method
  * Stream::RoundRobin: buffer => 0 option in in() method
  * Stream::Propagate: allow overriding 'ua' via constructor parameters

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 13 Feb 2012 22:41:07 +0400

libstream-more-perl (0.7.6) unstable; urgency=low

  * use and implement DOES() instead of does() when checking for capabilities

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 12 Jan 2012 22:24:57 +0400

libstream-more-perl (0.7.5) unstable; urgency=low

  * don't use Yandex::Version - dzil-generated $VERSION is enough

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 24 Nov 2011 17:01:08 +0400

libstream-more-perl (0.7.4) unstable; urgency=low

  * rollback removing 'data2' key in json formatter, add assert instead, so
    that we can upgrade smoothly in the next release
