@@ -1,6 +1,7 @@
 libstream-more-perl (0.8.1) UNRELEASED; urgency=low
 
   * Stream::Moose::Filter role
+  * Stream::Filter::Coro and filter_coro simple constructor
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 12 Mar 2012 23:39:52 +0400
 
